src/test/ui/issue-27942.stderr
error[E0308]: mismatched types
  --> $DIR/issue-27942.rs:17:5
   |
17 |     fn select(&self) -> BufferViewHandle<R>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Resources<'_>`
              found type `Resources<'a>`
note: the anonymous lifetime #1 defined on the method body at 17:5...
  --> $DIR/issue-27942.rs:17:5
   |
17 |     fn select(&self) -> BufferViewHandle<R>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...does not necessarily outlive the lifetime 'a as defined on the trait at 13:1
  --> $DIR/issue-27942.rs:13:1
   |
13 | / pub trait Buffer<'a, R: Resources<'a>> {
14 | |     //~^ NOTE the lifetime 'a as defined on the trait at 13:1...
15 | |     //~| NOTE ...does not necessarily outlive the lifetime 'a as defined on the trait
16 | |
...  |
25 | |     //~| NOTE the anonymous lifetime #1 defined on the method body at 17:5...
26 | | }
   | |_^

error[E0308]: mismatched types
  --> $DIR/issue-27942.rs:17:5
   |
17 |     fn select(&self) -> BufferViewHandle<R>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Resources<'_>`
              found type `Resources<'a>`
note: the lifetime 'a as defined on the trait at 13:1...
  --> $DIR/issue-27942.rs:13:1
   |
13 | / pub trait Buffer<'a, R: Resources<'a>> {
14 | |     //~^ NOTE the lifetime 'a as defined on the trait at 13:1...
15 | |     //~| NOTE ...does not necessarily outlive the lifetime 'a as defined on the trait
16 | |
...  |
25 | |     //~| NOTE the anonymous lifetime #1 defined on the method body at 17:5...
26 | | }
   | |_^
note: ...does not necessarily outlive the anonymous lifetime #1 defined on the method body at 17:5
  --> $DIR/issue-27942.rs:17:5
   |
17 |     fn select(&self) -> BufferViewHandle<R>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

